--- a/resources/views/layouts/main.pug
+++ b/resources/views/layouts/main.pug
@@ -89,7 +89,7 @@ html(lang="en")
           //-Second colum
           div.col-md-6.col-lg-8.col-xl-7.mx-auto.mb-r
             h6.title.font-bold
-              strong Aporta al proyecto
+              a(href="#"): strong Aporta al proyecto
             hr.red.mb-4.mt-0.d-inline-block.mx-auto(style="width: 60px;")
             p
               | Texto sobre el porqué donar o aportar a la causa
@@ -105,11 +105,10 @@ html(lang="en")
               p: i.fa.fa-envelope.mr-3 info@example.com
               p: i.fa.fa-phone.mr-3 (961)-0123456
 
-    //-Copyright
-    div.footer-copyright
-      div.container-fluid
-        p © 2018 Copyright: 
-          a(href="https://www.porlalibre.mx") ¡Vámonos por la libre!
+      //-Copyright
+      div.footer-copyright
+        div.container-fluid.text-center © 2018 Copyright: 
+            a(href="https://www.porlalibre.mx") ¡Vámonos por la libre!
     //-
     script(type="text/javascript" src="/js/jquery-3.2.1.js")
     script(type="text/javascript" src="/js/popper.min.js")
