--- a/resources/views/layouts/main.pug
+++ b/resources/views/layouts/main.pug
@@ -16,12 +16,16 @@ html(lang="en")
     link(rel="stylesheet" href="/css/bootstrap.min.css")
     link(rel="stylesheet" href="/css/mdb.min.css")
     link(rel="stylesheet" href="/css/style.css")
+      
+    script(type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js")
+    script(type="text/javascript" src="https://openpay.s3.amazonaws.com/openpay.v1.min.js")
+    script(type="text/javascript" src="https://openpay.s3.amazonaws.com/openpay-data.v1.min.js")
     
   body
     //-Main navigation
     header
       //-navbar
-      nav.navbar.navbar-expand-lg.navbar-dark.fixed-top.scrolling-navbar
+      nav.navbar.navbar-expand-lg.navbar-dark.secondary-color.fixed-top.scrolling-navbar
         div.container
           //-navbar brand
           a.navbar-brand(href="#"): img.navbar-brand.rounded-circle(src="/img/logo.jpg" alt="logo" width="40px")
@@ -58,7 +62,7 @@ html(lang="en")
               hr.hr-light
               //-Description
               h4.white-text.my-4 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti consequuntur.
-              button.btn.btn-warning.btn-rounded(type="button") Apóyanos con tu donación
+              button.btn.btn-warning.btn-rounded(type="button" data-toggle="modal" data-target="#donation-modal") Apóyanos con tu donación
                 i.fa.fa-flash.ml-2
 
     block content
@@ -114,12 +118,41 @@ html(lang="en")
     script(type="text/javascript" src="/js/popper.min.js")
     script(type="text/javascript" src="/js/bootstrap.min.js")
     script(type="text/javascript" src="/js/mdb.min.js")
+    
     //-
       script(type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js")
       script(type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js")
       script(type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js")
       script(type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.4.5/css/mdb.min.css")
-    
+    //-openpay
+    script.
+      $(document).ready(function() {
+          OpenPay.setId('mnfv5dmxgwgvxdjstxng');
+          OpenPay.setApiKey('pk_c69dd59d03d342e682ed1c54b5de509b');
+          OpenPay.setSandboxMode(true);
+          //Se genera el id de dispositivo
+          var deviceSessionId = OpenPay.deviceData.setup("payment-form", "deviceIdHiddenFieldName");
+          
+          $('#pay-button').on('click', function(event) {
+              event.preventDefault();
+              $("#pay-button").prop( "disabled", true);
+              OpenPay.token.extractFormAndCreate('payment-form', sucess_callbak, error_callbak);                
+          });
+
+          var sucess_callbak = function(response) {
+            var token_id = response.data.id;
+            $('#token_id').val(token_id);
+            $('#payment-form').submit();
+          };
+
+          var error_callbak = function(response) {
+              var desc = response.data.description != undefined ? response.data.description : response.message;
+              alert("ERROR [" + response.status + "] " + desc);
+              $("#pay-button").prop("disabled", false);
+          };
+
+      });
+      
     //-Carousel options
     script.
       $('.carousel').carousel({
