id pay-button to button

--- a/resources/views/index.pug
+++ b/resources/views/index.pug
@@ -163,7 +163,7 @@ block content
                     p.grey-text Transacciones realizadas vía:
                     img.img-fluid(src="/img/openpay.png")
                 div.text-center.py-4.mt-3
-                  button.btn.btn-warning(type="submit") Donar
+                  button#pay-button.btn.btn-warning(type="submit") Donar
                     i.fa.fa-flash.ml-2
                     
       hr.my-5
