--- a/resources/views/index.pug
+++ b/resources/views/index.pug
@@ -131,8 +131,8 @@ block content
                         //-input owner
                         div.md-form.form-group(required)
                           i.fa.fa-user.prefix.grey-text
-                          input#holder_name.form-control(type="text")
-                          label.font-weight-light(for="holder_name" data-openpay-card="holder_name") Nombre del titular
+                          input#holder_name.form-control(type="text" data-openpay-card="holder_name")
+                          label.font-weight-light(for="holder_name") Nombre del titular
                       div.col-md-4
                         //-input cvv2                        
                         div.md-form.form-group(required)
