--- a/resources/views/index.pug
+++ b/resources/views/index.pug
@@ -88,7 +88,7 @@ block content
       
       div.fixed-action-btn.smooth-scroll(style="bottom: 45px; right: 24px;")
         a.btn-floating.btn-large.red.waves-effect.waves-light(href="#intro"): i.fa.fa-arrow-up
-      
+
       //-Modal
       div#donation-modal.modal.fade(tabindex="-1" role="dialog" aria-labelledby="donation-modal-label" aria-hidden="true")
         div.modal-dialog.modal-lg(role="document")
@@ -114,8 +114,10 @@ block content
                     //-input name
                     div.md-form.form-group
                       i.fa.fa-user.prefix.grey-text
-                      input#name.form-control(type="text" name="name")
+                      input#name.form-control(type="text" name="name" required)
                       label.font-weight-light(for="name") Nombre
+                      span(class="text-danger")
+                            strong(id="holder_name_error")
                       div.invalid-feedback Ingresa tu nombre
                     //-input lastname
                     div.md-form.form-group(required)
@@ -137,6 +139,7 @@ block content
                           i.fa.fa-user.prefix.grey-text
                           input#holder_name.form-control(type="text" data-openpay-card="holder_name")
                           label.font-weight-light(for="holder_name") Nombre del titular
+                          
                       div.col-md-4
                         //-input cvv2                        
                         div.md-form.form-group(required)
