--- a/resources/views/layouts/main.pug
+++ b/resources/views/layouts/main.pug
@@ -16,12 +16,17 @@ html(lang="en")
     link(rel="stylesheet" href="/css/bootstrap.min.css")
     link(rel="stylesheet" href="/css/mdb.min.css")
     link(rel="stylesheet" href="/css/style.css")
+
+    link(rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.11.0/build/css/alertify.min.css")
+    link(rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.11.0/build/css/themes/bootstrap.min.css")
     //-  
       script(type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js")
     script(type="text/javascript" src="/js/jquery-3.2.1.js")
     script(type="text/javascript" src="https://openpay.s3.amazonaws.com/openpay.v1.min.js")
     script(type="text/javascript" src="https://openpay.s3.amazonaws.com/openpay-data.v1.min.js")
-    
+    script(type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js")
+    script(type="text/javascript" src="//cdn.jsdelivr.net/npm/alertifyjs@1.11.0/build/alertify.min.js")
+
   body
     //-Main navigation
     header
@@ -156,15 +161,38 @@ html(lang="en")
           
           $('#pay-button').on('click', function(event) {
               event.preventDefault();
-              $("#pay-button").prop( "disabled", true);
+              //- $("#pay-button").prop( "disabled", true); Luego no se vuelve a activar, no es requerido esto.
               OpenPay.token.extractFormAndCreate('payment-form', sucess_callbak, error_callbak);                
           });
 
           var sucess_callbak = function(response) {
             var token_id = response.data.id;
             $('#token_id').val(token_id);
-            $('#payment-form').submit();
-            $('#payment-form')[0].reset();
+
+            var paymentForm = $("#payment-form");
+            var paymentformData = paymentForm.serialize();
+            $('#holder_name_error').html( "" );
+            //Agregar los otros para los demás campos
+
+            $.ajax({
+              url: "/pll",
+              type: "POST",
+              data: paymentformData,
+              success: function(data) {
+                console.log(data);
+                if(data.errors) {
+                    if(data.errors.name)
+                        $( '#holder_name_error' ).html(data.errors.name[0]);
+
+                    //poner los otros if de los demas campos
+                }
+                 if(data.success) {
+                   alertify.success(data.success); //El mensaje de correcto
+                    $('#payment-form')[0].reset(); 
+                    $('#donation-modal').modal('hide');
+                 }           
+              }
+            });
           };
 
           var error_callbak = function(response) {
