--- a/resources/views/index.pug
+++ b/resources/views/index.pug
@@ -91,85 +91,89 @@ block content
 
       //-Modal
       div#donation-modal.modal.fade(tabindex="-1" role="dialog" aria-labelledby="donation-modal-label" aria-hidden="true")
-        div.modal-dialog.modal-lg(role="document")
+        div.modal-dialog.modal-lg.cascading-modal(role="document")
           div.modal-content
-            div.modal-header
+            div.modal-header.blue-grey.lighten-5.grey-text
               //-h4#donation-modal-label.modal-title Modal title
               div.row.justify-content-start
-                div.col-md-4.grey-text(style="border-right: 1px solid;")
-                  p.h5.py-4.grey-text Tarjetas de crédito
+                div.col-md-4(style="border-right: 1px solid;")
+                  p.h6.py-4 Tarjetas de crédito
                   img.img-fluid(src="/img/cards1.png")
                 div.col-md-8
-                  p.h6.py-4.grey-text Tarjetas de débito
+                  p.h6.py-4 Tarjetas de débito
                   img.img-fluid(src="/img/cards2.png")
               button.close(type="button" data-dismiss="modal" aria-label="Close")
-                span(aria-hidden="true") &times;
+                span.grey-text(aria-hidden="true") &times;
             div.modal-body
               //-Material form
               form#payment-form.needs-validation(action="/pll" method="POST")
                 input#token_id(type="hidden" name="token_id")
                 div.row
                   div.col-md-6
-                    p.h4.text-center.py-4 Datos personales
                     //-input name
                     div.md-form.form-group
                       i.fa.fa-user.prefix.grey-text
                       input#name.form-control(type="text" name="name" required)
                       label.font-weight-light(for="name") Nombre
-                      span(class="text-danger")
-                            strong(id="holder_name_error")
-                      div.invalid-feedback Ingresa tu nombre
+                      span.text-danger: strong(id="name_error")
+                      //-div.invalid-feedback
                     //-input lastname
                     div.md-form.form-group(required)
                       i.fa.fa-user.prefix.grey-text
                       input#lastname.form-control(type="text" name="lastname")
                       label.font-weight-light(for="name") Apellido
-                        
+                      span.text-danger: strong(id="lastname_error")  
                     //-input email
                     div.md-form.form-group(required)
                       i.fa.fa-envelope.prefix.grey-text
                       input#email.form-control(type="email" name="email")
                       label.font-weight-light(for="email") Correo electrónico
+                      span.text-danger: strong(id="email_error")
+                    div.md-form.form-group(required)
                   div.col-md-6
-                    p.h5.text-center.py-4 Datos de la tarjeta
                     div.row
                       div.col-md-8
                         //-input owner
                         div.md-form.form-group(required)
                           i.fa.fa-user.prefix.grey-text
-                          input#holder_name.form-control(type="text" data-openpay-card="holder_name")
+                          input#holder_name.form-control(type="text" name="holder_name" data-openpay-card="holder_name")
                           label.font-weight-light(for="holder_name") Nombre del titular
-                          
+                            i.fa.fa-question-circle.ml-2(data-toggle="tooltip" title="Nombre tal y como se encuentra en la tarjeta")
+                          span.text-danger: strong(id="holder_name_error")
                       div.col-md-4
                         //-input cvv2                        
                         div.md-form.form-group(required)
                           i.fa.fa-credit-card-alt.prefix.grey-text
-                          input#cvv2.form-control(type="text" autocomplete="off" data-openpay-card="cvv2")
+                          input#cvv2.form-control(type="text" name="cvv2" autocomplete="off" data-openpay-card="cvv2")
                           label.font-weight-light(for="cvv2") CVV
+                            i.fa.fa-question-circle.ml-2(data-toggle="tooltip" title="Los 3 o 4 dígitos al reverso de tu tarjeta")
+                          span.text-danger: strong(id="cvv2_error")
                     //-input card_number
                     div.md-form.form-group(required)
                       i.fa.fa-credit-card-alt.prefix.grey-text
-                      input#card_number.form-control(type="text" autocomplete="off" data-openpay-card="card_number")
+                      input#card_number.form-control(type="text" name="card_number" autocomplete="off" data-openpay-card="card_number")
                       label.font-weight-light(for="card_number") Número de tarjeta
+                      span.text-danger: strong(id="card_numer_error")
                     div.row
                       div.col-md-4
                         //-input expiration_month  
                         div.md-form.form-group(required)
                           i.fa.fa-calendar.prefix.grey-text
-                          input#expiration_month.form-control(type="text" aria-describedby="expiration_help" data-openpay-card="expiration_month")
+                          input#expiration_month.form-control(type="text" name="expiration_month" aria-describedby="expiration_help" data-openpay-card="expiration_month")
                           label.font-weight-light(for="expiration_month") MM
+                          span.text-danger: strong(id="expiration_month_error")
                           small#expiration_help.form-text.text-muted Fecha de expiración
+                            i.fa.fa-question-circle.ml-2(data-toggle="tooltip" title="A dos dígitos")
                       div.col-md-3
                         //-input expiration_year
                         div.md-form.form-group(required)
-                          input#expiration_year.form-control(type="text" data-openpay-card="expiration_year")
+                          input#expiration_year.form-control(type="text" name="expiration_year" data-openpay-card="expiration_year")
                           label.font-weight-light(for="expiration_year") AA
-                div.row(style="margin-top: 20px;")
-                  div.col-md-8
+                          span.text-danger: strong(id="expiration_year_error")
+                div.row
                   div.col-md-4.grey-text.text-md-right
                     p.grey-text Transacciones realizadas vía:
                     img.img-fluid(src="/img/openpay.png")
-                div.text-center.py-4.mt-3
-            div.modal-footer
-              button.btn.btn-secondary(type="button" data-dismiss="modal") Close
-              button#pay-button.btn.btn-warning(type="submit") Donar
+                div.text-center.mt-4.mb-2
+                  button#pay-button.btn.btn-warning.btn-rounded(type="submit") Donar
+                    i.fa.fa-flash.ml-2
